# compassionware-framework

./: CONTRIBUTING.md  DESIGN_LOG.md  LICENSE  LINEAGE.md  README.md  pyproject.toml
docs/: PRINCIPLES.md
examples/: digital_prayer_wheel.py
tests/: test_prayer_wheel.py
